--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/open-sans": "^4.5.10",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "eslint": "8.18.0",
