--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-rating-stars-component": "^2.2.0",
+    "sharp": "^0.30.7",
     "validator": "^13.7.0",
     "zustand": "^4.0.0-rc.1"
   },
