--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/nunito": "^4.5.9",
     "@fontsource/open-sans": "^4.5.10",
+    "@sweetalert/with-react": "^0.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
@@ -24,6 +25,7 @@
     "react-player": "^2.10.1",
     "react-rating-stars-component": "^2.2.0",
     "sharp": "^0.30.7",
+    "sweetalert": "^2.1.2",
     "validator": "^13.7.0",
     "zustand": "^4.0.0-rc.1"
   },
