--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/nunito": "^4.5.9",
     "@fontsource/open-sans": "^4.5.10",
     "@sweetalert/with-react": "^0.1.1",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
