--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-spinners": "^0.13.3",
     "sharp": "^0.30.7",
     "sweetalert": "^2.1.2",
     "validator": "^13.7.0",
