--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.11",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
